# SangeEngine

./: .gitignore  CMakeLists.txt  SangeEngine.sln  SangeEngine.vcxproj  SangeEngine.vcxproj.filters
cmake/: FindExternalDeps.cmake
include/: appLayer.h  application.h  camera.h  layer.h  mesh.h  model.h  shader.h  texture.h  vertex.h  window.h
src/: appLayer.cpp  application.cpp  camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  window.cpp
src/shaders/: defaultShader.FS.glsl  defaultShader.VS.glsl
